traefik/traefik_service.yml
kind: Service
apiVersion: v1
metadata:
  name: traefik-dashbaord
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9000
